@@ -1,5 +1,8 @@
 2012-05-23  Bastian Maerkisch  <bmaerkisch@web.de>
 
+	* src/win/wgraph.c src/win/wgnuplib.h term/win.trm: Support for 
+	hypertext labels for win terminal.
+
 	* src/win/wgdiplus.c|h src/wgraph.c term/win.trm: rgba colors.
 	Resticted to GDI+ and thus currently only available when using
 	antialiasing.
